# chat_edu

./: .gitignore  COMMIT_SUMMARY.md  Dockerfile  FRONTEND_IMPROVEMENTS.md  docker-compose.yml  ingest_data.py  main.py  pyproject.toml  requirements.txt
Documentos/chat_edu/: agents.ipynb  main.py  pyproject.toml
Documentos/chat_edu/crawler/: scrapping.py
Documentos/chat_edu/ingestor/: fetch_data.py  vector_database_ingest.py
agents/: analyzer.py  answer_agent.py  retriever.py  review_agent.py  tools.py
api/: models.py  routes.py
chat-edu-frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
chat-edu-frontend/src/: App.css  App.js  App.tsx  ChatInterface.js  CoursesList.css  CoursesList.js  CustomMindMapNode.css  CustomMindMapNode.js  Dashboard.css  Dashboard.js  FlashcardInterface.css  FlashcardInterface.js  Login.css  Login.js  MindMapInterface.js  UserProfile.css  UserProfile.js  index.css
chat-edu-frontend/src/components/: ErrorBoundary.tsx
chat-edu-frontend/src/contexts/: AuthContext.tsx  CourseContext.tsx
chat-edu-frontend/src/pages/: Dashboard.tsx  Login.tsx
chat-edu-frontend/src/services/: api.ts
chat-edu-frontend/src/types/: index.ts
config/: settings.py
core/: graph.py  prompt_utils.py
crawler/: login.py  scrapping.py
ingestor/: embeddings.py
services/: document_service.py  embedding_service.py  flashcard_service.py  llm_service.py  mind_map_service.py  vector_store_service.py
utils/: database.py  document_processor.py  embeddings.py  llm.py
(+10 files in other folders)
